# Atv2--PPD

./: CMakeLists.txt  README.md  barreiras.c  deadlock.c  leitores_escritores.c  sinais.c
